# mcp-web-search

./: .gitignore  Cargo.toml  MIGRATION.md  README.md  tools.json
src/: browser.rs  client.rs  config.rs  errors.rs  http.rs  lib.rs  main.rs  protocol.rs  ratelimit.rs  server.rs  tls.rs  tools.rs  validation.rs
src/actions/: browser.rs  extract.rs  fetch.rs  map.rs  mod.rs  scrape.rs  search.rs
src/providers/: bing.rs  bocha.rs  duckduckgo.rs  exa.rs  google.rs  mod.rs  searxng.rs  tavily.rs  types.rs  zhipu.rs
tests/: compliance.rs  integration_test.rs
