[package]
name = "mcp-web-search"
version = "1.0.0"
edition = "2024"
authors = ["Piyush"]
description = "High-performance, SSRF-hardened MCP server for web search, scraping, URL discovery, and multi-URL content extraction — a secure Rust alternative to one-search-mcp"
repository = "https://github.com/corporatepiyush/mcp-web-search"
homepage = "https://github.com/corporatepiyush/mcp-web-search"
license = "Apache-2.0"
readme = "README.md"
keywords = ["mcp", "web-search", "scraper", "json-rpc", "llm"]
categories = ["web-programming::http-client", "command-line-utilities"]
include = ["src/", "tools.json", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
# Async runtime — latest stable
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "io-util", "net", "time", "sync", "io-std"] }

# HTTP server — axum 0.8 latest patch
axum = "0.8"
hyper = { version = "1.6", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit", "timeout", "set-header"] }
futures = "0.3"

# HTTP client (rustls — no OpenSSL/C), gzip + brotli transport decompression
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "http2", "json", "stream", "brotli"] }

# JSON-RPC and protocol
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.10"

# HTML parsing + HTML→Markdown
scraper = "0.22"
htmd = "0.2"
url = "2.5"

# XML parsing (sitemap.xml)
quick-xml = { version = "0.37", features = ["serialize"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Auth (constant-time bearer token comparison)
sha2 = "0.10"
subtle = "2.6"

# Memory allocator — mimalloc for performance
mimalloc = { version = "0.1", features = ["local_dynamic_tls", "override"] }

# System
num_cpus = "1.16"

[dev-dependencies]
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "test-util"] }
rand = "0.9"

[lints.clippy]
large_stack_frames = "warn"
large_enum_variant = "warn"
boxed_local = "warn"
box_collection = "warn"
redundant_clone = "warn"
needless_pass_by_value = "warn"
trivially_copy_pass_by_ref = "warn"
unnecessary_to_owned = "warn"
implicit_clone = "warn"
iter_overeager_cloned = "warn"
ptr_arg = "warn"
missing_const_for_fn = "warn"
cast_lossless = "warn"
unnecessary_cast = "warn"
vec_init_then_push = "warn"
string_add_assign = "warn"
inefficient_to_string = "warn"
manual_memcpy = "warn"
useless_vec = "warn"
slow_vector_initialization = "warn"
manual_find_map = "warn"
manual_filter_map = "warn"
mutex_atomic = "warn"
option_option = "warn"

[[bin]]
name = "mcp-web-search"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
